--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,56 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Roboto', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+@font-face {
+  font-family: 'Roboto';
+  src: url('/public/assets/fonts/Roboto/Roboto-Thin.woff2') format('woff2'),
+    url('/public/assets/fonts/Roboto/Roboto-Thin.woff') format('woff');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('/public/assets/fonts/Roboto/Roboto-BoldItalic.woff2')
+      format('woff2'),
+    url('/public/assets/fonts/Roboto/Roboto-BoldItalic.woff') format('woff');
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('/public/assets/fonts/Roboto/Roboto-ThinItalic.woff2')
+      format('woff2'),
+    url('/public/assets/fonts/Roboto/Roboto-ThinItalic.woff') format('woff');
+  font-weight: 100;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('/public/assets/fonts/Roboto/Roboto-LightItalic.woff2')
+      format('woff2'),
+    url('/public/assets/fonts/Roboto/Roboto-LightItalic.woff') format('woff');
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('/public/assets/fonts/Roboto/Roboto-Regular.woff2') format('woff2'),
+    url('/public/assets/fonts/Roboto/Roboto-Regular.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('/public/assets/fonts/Roboto/Roboto-Light.woff2') format('woff2'),
+    url('/public/assets/fonts/Roboto/Roboto-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
 }
