--- a/src/components/button-icon/button-icon.css
+++ b/src/components/button-icon/button-icon.css
@@ -11,6 +11,12 @@
   appearance: none;
 }
 
+@media (min-width: 500px) {
+  .ButtonIcon {
+    padding: 16px;
+  }
+}
+
 /* .ButtonIcon:focus {
   box-shadow: 0 0 8px 0 #575757;
 }
@@ -27,6 +33,13 @@
   display: inline-block;
   width: 22px;
   height: 22px;
+}
+
+@media (min-width: 500px) {
+  .ButtonIcon-holder {
+    width: 28px;
+    height: 28px;
+  }
 }
 
 .ButtonIcon--size-normal {
